--- a/style.css
+++ b/style.css
@@ -15,8 +15,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 25%;
+    width: 27%;
     height: 30%;
     text-align: center;
     font-size: 80px;
+}
+
+#gameboard {
+    height: 500px;
+    width: 60%;
+    margin: auto;
+    
 }
