--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@
 }
 
 #gameboard {
-    height: 500px;
+    height: 300px;
     width: 50%;
-    margin-left: 550px;
+    margin-left: 29%;
     
 }
 
